[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/OrcMonsterMace.gd" type="Script" id=8]
[ext_resource path="res://art/monster_015.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 384, 192 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 384, 192 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 384, 192 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 384, 192 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 1536, 0, 384, 192 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 384, 192 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 384, 192, 384, 192 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 768, 192, 384, 192 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 576, 384, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 384, 576, 384, 192 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 768, 576, 384, 192 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 1152, 576, 384, 192 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 1536, 576, 384, 192 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 0, 768, 384, 192 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 384, 768, 384, 192 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 768, 768, 384, 192 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 45, 35 )

[sub_resource type="RectangleShape2D" id=19]

[sub_resource type="CircleShape2D" id=20]
radius = 148.636

[node name="snake" type="KinematicBody2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( -8, 8 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 17 )
animation = "idle"
frame = 6
speed_scale = 1.8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 18 )

[node name="right_limit" type="RayCast2D" parent="Area2D"]
position = Vector2( 5, 32 )
enabled = true

[node name="left_limit" type="RayCast2D" parent="Area2D"]
position = Vector2( -21, 30 )
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 19 )
disabled = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="radar" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 20 )
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
